cmake_minimum_required(VERSION 3.17)
project(COS214_Project)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(COS214_Project
        A_Base_Car.cpp
        A_Base_Car.h
        A_Car_Factory.h
        A_Opposing_Car.cpp
        A_Opposing_Car.h
        A_Opposing_Driver.cpp
        A_Opposing_Driver.h
        A_Opposing_Team.cpp
        A_Opposing_Team.h
        Aggressive.h
        Bahrain.cpp
        Bahrain.h
        Base_Car.h
        Base_Car_Measurements.cpp
        Base_Car_Measurements.h
        BluePrint.cpp
        BluePrint.h
        Car_factory.cpp
        Car_factory.h
        Class.h
        Class2.h
        Class3.h
        Class4.h
        Class5.h
        Client.cpp
        Client.h
        Command.cpp
        Command.h
        Component.cpp
        Component.h
        Conc_Radio_System.cpp
        Conc_Radio_System.h
        Concrete_Base_Car_Measurements.cpp
        Concrete_Base_Car_Measurements.h
        Conservative.h
        Department.cpp
        Department.h
        Driver.cpp
        Driver.h
        Driver_Management.cpp
        Driver_Management.h
        Engineering.cpp
        Engineering.h
        Engineering_Iterator.cpp
        Engineering_Iterator.h
        Engineering_Stage.cpp
        Engineering_Stage.h
        Experienced.h
        Fast_Repair.h
        Hard.h
        Individual_Component.h
        Main_race_tyres.h
        Medium.h
        Moderate.h
        Monaco.cpp
        Monaco.h
        Monza.cpp
        Monza.h
        Opposing_Car.cpp
        Opposing_Car.h
        Opposing_Driver.cpp
        Opposing_Driver.h
        Opposing_Team.cpp
        Opposing_Team.h
        Overall.cpp
        Overall.h
        Performance_Indicator.cpp
        Performance_Indicator.h
        Pit_Crew.h
        Pit_Stop.cpp
        Pit_Stop.h
        Pit_Strategy.h
        Prepared.h
        Preparedness.cpp
        Preparedness.h
        Pro.h
        Qualifying_tyres.h
        Race_Command.cpp
        Race_Command.h
        Race_Computations.cpp
        Race_Computations.h
        Race_Crew.cpp
        Race_Crew.h
        RaceDay_Stage.cpp
        RaceDay_stage.h
        RaceDay_Strat.cpp
        RaceDay_Strat.h
        Radio_System.cpp
        Radio_System.h
        Risky.h
        Rookie.h
        Skill_Level.cpp
        Skill_Level.h
        Slow_Repair.h
        Soft.h
        Stage.cpp
        Stage.h
        Statistics.cpp
        Statistics.h
        Strategy_Plan.cpp
        Strategy_Plan.h
        Strategy_Stage.cpp
        Strategy_Stage.h
        Strategy_Team.h
        Teams.cpp
        Teams.h
        Testing_Stage.cpp
        Testing_Stage.h
        Track.cpp
        Track.h
        Transport.cpp
        Transport.h
        Tyres.h
        Unprepared.h
        Weather.cpp
        Weather.h Rookie.cpp Experienced.cpp Pro.cpp Unprepared.cpp Moderate.cpp Prepared.cpp)
